--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					<aside>
 						<div class="center">
 							<img src="bin/unknown.jpg"/>
-							@<input type="text" id="search-query" />
+							<big>@</big><input type="text" id="search-query" />
 						</div>
 					</aside>
 					<main>
@@ -23,7 +23,9 @@
 			<flow-step id="step-repository">
 				<aside>
 					<user-badge id="selected-user" title="back to users">
-						<img src="bin/unknown.jpg"/>
+						<div class="back-link">
+							<img src="bin/unknown.jpg"/>
+						</div>
 						<user-name></user-name>
 					</user-badge>
 				</aside>
