big step towards a reusable UI component

--- a/index.html
+++ b/index.html
@@ -6,19 +6,7 @@
     	<link rel="stylesheet" media="all" href="bundle.css">
 	</head>
 	<body>
-		<flow-manager>
-			<flow-step id="step-user">
-				<user-search></user-search>
-			</flow-step>
-			<flow-step id="step-repository">
-				<aside>
-					<user-badge></user-badge>
-				</aside>
-				<main>
-					<repository-list></repository-list>
-				</main>
-			</flow-step>
-		</flow-manager>
+		<flow-manager></flow-manager>
     	<script src="bundle.js"></script>
 	</body>
 </html>
