--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" data-framework="3Flight">
+<html lang="en" data-framework="Fiber">
 	<head>
 		<meta charset="utf-8">
-		<title>3Flight • GitHub demo</title>
+		<title>Fiber • GitHub demo</title>
     	<link rel="stylesheet" media="all" href="bundle.css">
 	</head>
 	<body>
